--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <dependency>
             <groupId>com.manywho.sdk</groupId>
             <artifactId>sdk-client</artifactId>
+            <version>1.22.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.twilio.sdk</groupId>
@@ -88,6 +89,11 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>1.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>xmlunit</groupId>
+            <artifactId>xmlunit</artifactId>
+            <version>1.6</version>
         </dependency>
     </dependencies>
 
