--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "examples"]
 	path = examples
-	url = git@github.com:manywho/service-twilio-examples.git
+	url = https://github.com/manywho/service-twilio-examples.git
