--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
         <dependency>
             <groupId>com.manywho.sdk</groupId>
             <artifactId>sdk-client</artifactId>
+            <version>1.25.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.twilio.sdk</groupId>
