issue #18 sms reply doesnt work for some providers

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>sdk-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.libphonenumber</groupId>
+            <artifactId>libphonenumber</artifactId>
+            <version>8.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
