--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
             <version>4.3.3</version>
         </dependency>
         <dependency>
-            <groupId>org.graylog2.log4j2</groupId>
-            <artifactId>log4j2-gelf</artifactId>
-            <version>1.1.0</version>
+            <groupId>biz.paluch.logging</groupId>
+            <artifactId>logstash-gelf</artifactId>
+            <version>1.12.0</version>
         </dependency>
         <dependency>
             <groupId>com.lmax</groupId>
