--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+dependency-reduced-pom.xml
 
 
 ### Intellij ###
@@ -50,3 +51,10 @@ com_crashlytics_export_strings.xml
 
 # Generated properties
 *.properties
+
+### VSCode ###
+.vscode/
+.classpath
+.project
+.settings
+.factorypath
